added basic autocomplete layout

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
   </head>
-  <body dir="rtl" class="mat-typography">
+  <body class="mat-typography">
     <app-root></app-root>
   </body>
 </html>
